--- a/i3/config
+++ b/i3/config
@@ -219,14 +219,14 @@ bindsym $mod+c exec --no-startup-id google-chrome --show-app-list
 for_window [instance="chrome_app_list" window_role="bubble"] floating enable
 exec_always --no-startup-id compton 
 
-# exec_always --no-startup-id feh --bg-fill ~/Pictures/backgrounds/ubuntu.jpg
+exec_always --no-startup-id feh --bg-fill ~/Pictures/backgrounds/dream_world.jpg
 #exec_always --no-startup-id  xwinwrap -g 1920x10800 -fs -ov -ni -s -nf -- gifview -w WID test.gif -a   
 # resize gif with gifsicle --scale 3.0 gif.gif > newgif.gif
 #exec_always --no-startup-id  xwinwrap -g 1920x10800 -fs -ov -ni -s -nf -- gifview -w WID /home/jules/Pictures/backgrounds/gif/City.gif -a   
 #exec_always --no-startup-id  xwinwrap -g 1920x10800 -fs -ov -ni -s -nf -- gifview -w WID /home/jules/Pictures/backgrounds/gif/Sakura.gif -a   
 #exec_always --no-startup-id  xwinwrap -g 1920x10800 -fs -ov -ni -s -nf -- gifview -w WID /home/jules/Pictures/backgrounds/gif/MoonRoad.gif -a   
 
-exec_always --no-startup-id  xwinwrap -g 1920x1080 -fs -ov -ni -s -nf -- mpv -wid WID --loop --no-audio /home/jules/Pictures/backgrounds/live_wallpaper/space.mp4   
+#exec_always --no-startup-id  xwinwrap -g 1920x1080 -fs -ov -ni -s -nf -- mpv -wid WID --loop --no-audio /home/jules/Pictures/backgrounds/live_wallpaper/space.mp4   
 # exec_always  --no-startup-id  xwinwrap -g 1920x10800 -fs -ov -ni -s -nf -- mpv -wid WID --loop --no-audio /home/jules/Pictures/backgrounds/live_wallpaper/sakura2.mp4
 exec_always --no-startup-id xmodmap ~/.Xmodmap
 
